--- a/Alurabooks/index.html
+++ b/Alurabooks/index.html
@@ -70,6 +70,29 @@
     <div class="swiper-button-next"></div>
   
   </div>
+
+    <div class="card">
+        <!-- 1º linha-->
+        <div class="card__descrição"></div>
+        <!-- 1º coluna-->
+            <div class="descrição">
+                <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+                <h2 class="descrição__titulo_livro">Angular 11 e Firebase</h2>
+                <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            </div>
+            <!-- 2º coluna-->
+            <img src="img/Angular.svg" class="descrição__imagem">
+            <!-- 2º linha-->
+            <div class="card__botões">
+                <!-- 1º coluna-->
+                <ul class="botões">
+                    <li class="botões__item"><img src="img/coração.svg" alt="favoritar livro"></li>
+                    <li class="botôes__item"><img src="img/Sacola.svg" alt="adicionar no carrinho de compras"></li>
+                </ul>
+                <!-- 2º coluna-->
+                <a href="#" class="botões__ancora">saiba mais</a>
+            </div>
+    </div>
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
