--- a/Alurabooks/index.html
+++ b/Alurabooks/index.html
@@ -71,18 +71,19 @@
   
   </div>
 
-    <div class="card">
-        <!-- 1º linha-->
-        <div class="card__descrição"></div>
-        <!-- 1º coluna-->
-            <div class="descrição">
-                <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-                <h2 class="descrição__titulo_livro">Angular 11 e Firebase</h2>
-                <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
-            </div>
-            <!-- 2º coluna-->
-            <img src="img/Angular.svg" class="descrição__imagem">
-            <!-- 2º linha-->
+  <div class="card">
+  <div class="card__descrição">
+    <!-- 1º coluna-->
+        <div class="descrição">
+            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+            <h2 class="descrição__titulo_livro">Angular 11 e Firebase</h2>
+            <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+        </div>
+        <!-- 2º coluna-->
+        <img src="img/Angular.svg" class="descrição__imagem">
+</div>
+
+
             <div class="card__botões">
                 <!-- 1º coluna-->
                 <ul class="botões">
