--- a/Alurabooks/index.html
+++ b/Alurabooks/index.html
@@ -208,6 +208,95 @@
 
 <footer class="rodape">
     <h2 class="rodape__titulo">Grupo Alura</h2>
+    <ul class="lista-rodapé">
+        <li class="lista-rodapé__título">Educação</li>
+        <li class="lista-rodapé__item">
+            <img src="../Alurabooks/img/CasaDoCodigo.svg" alt="logo da casa do código">
+        <a href="#" class="lista-rodapé__link">Casa do código</a>
+    </li>
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/Caelum.svg" alt="logo da casa do Caelum">
+    <a href="#" class="lista-rodapé__link">Caelum</a>
+</li>
+    </ul>
+
+    <ul class="lista-rodapé">
+        <li class="lista-rodapé__título">Educação online</li>
+        <li class="lista-rodapé__item">
+            <img src="../Alurabooks/img/Alura.svg" alt="logo da Alura">
+        <a href="#" class="lista-rodapé__link">Alura</a>     
+        
+        <li class="lista-rodapé__item">
+            <img src="../Alurabooks/img/AluraEmpresas.svg" alt="logo da Alura para empresas">
+        <a href="#" class="lista-rodapé__link">Alura para empresas</a>
+
+        <li class="lista-rodapé__item">
+            <img src="../Alurabooks/img/AluraLATAM.svg" alt="logo da Alura Latam">
+        <a href="#" class="lista-rodapé__link">Alura Latam</a>
+    </li>
+
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/AluraStart.svg" alt="logo da AluraStart">
+    <a href="#" class="lista-rodapé__link">Alura Start</a>
+</li>
+
+<li class="lista-rodapé__item">
+    <img src="../Alurabooks/img/MusicDot.svg" alt="logo da Music Dot">
+<a href="#" class="lista-rodapé__link">Music Dot</a>
+</li>
+
+<li class="lista-rodapé__item">
+    <img src="../Alurabooks/img/AluraLingua.svg" alt="logo da AluraLingua">
+<a href="#" class="lista-rodapé__link">Alura Língua</a>
+</li>
+
+<li class="lista-rodapé__item">
+    <img src="../Alurabooks/img/PM3.svg" alt="logo da PM3">
+<a href="#" class="lista-rodapé__link">PM3</a>
+</li>
+    </li>
+    </li>
+    </ul>
+
+    <ul class="lista-rodapé">
+        <li class="lista-rodapé__título">Comunidade</li>
+        
+        <li class="lista-rodapé__item">
+            <img src="../Alurabooks/img/HipstersTech.svg" alt="logo da Hipsters Tech">
+        <a href="#" class="lista-rodapé__link">Hipsters Tech</a>
+    </li>
+
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/ScubaDev.svg" alt="logo da Scuba Dev">
+    <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+    </li>
+
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/LayersTech.svg" alt="logo da Layers Tech">
+    <a href="#" class="lista-rodapé__link">Layers Tech</a>
+    </li>
+
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/LikeABoss.svg" alt="logo da Like a Boss">
+    <a href="#" class="lista-rodapé__link">Like a Boss</a>
+    </li>
+
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/CarreiraSemFronteira.svg" alt="logo da Carreira sem fronteira">
+    <a href="#" class="lista-rodapé__link">Carreira Sem Fronteira</a>
+    </li>
+
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/HipstersJobs.svg" alt="logo da Hipsters Jobs">
+    <a href="#" class="lista-rodapé__link">Hipsters Jobs</a>
+    </li>
+
+    <li class="lista-rodapé__item">
+        <img src="../Alurabooks/img/GUJ.svg" alt="logo da GUJ">
+    <a href="#" class="lista-rodapé__link">GUJ</a>
+    </li>
+
+    </ul>
 </footer>
 
 
